Fixed layout problem on the home page.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,7 +28,7 @@ label, td {
 /* navigation */
 .navigation-container {
     height: 40px;
-    background: linear-gradient(greenyellow, rgb(210, 255, 47));
+    background: linear-gradient(rgb(47, 206, 255),rgb(43, 194, 240));
     display: flex;
     align-items: center;
     padding: 0px 10px;
@@ -39,7 +39,8 @@ label, td {
     border: solid rgb(208, 208, 208) 1px;
     border-radius: 4px;
     max-width: 1100px;
-    box-shadow: 0px 0px 18px 18px rgba(0,0,0,0.02);
+    box-shadow: 0px 0px 25px 25px rgba(0,0,0,0.04);
+    width: auto;
 }
 
 .card-img-top {
@@ -57,7 +58,7 @@ label, td {
 
 /* footer */
 footer {
-    background-color: rgb(233, 255, 227);
+    background-color: rgb(237, 247, 255);
 }
 
 .logo-size {
@@ -67,3 +68,9 @@ footer {
 .acknowledgements-list {
     list-style: none;
 }
+
+@media only screen and (min-width: 500px) {
+    .card {
+        width: 300px !important;
+    }
+  }
